--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>org.app</groupId>
-    <artifactId>lab5</artifactId>
+    <artifactId>MonkeySurvey</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
